[package]
name = "rget"
version = "1.0.0"
authors = ["legendary-cookie <github.com@xolley.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/lib.rs"

[[bin]]
name = "rget"
path = "src/main.rs"

[dependencies]
futures-util = "0.3.16"
indicatif = "0.16.2"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
common = { path = "../common" }
filesize = "0.2.0"

[dependencies.clap]
version = "2.3.3"
features = ["suggestions", "color" ]


[build-dependencies]
clap = "2.3.3"


