[package]
name = "rget"
version = "1.1.0"
authors = ["legendary-cookie <github.com@xolley.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/lib.rs"

[[bin]]
name = "rget"
path = "src/main.rs"

[dependencies]
futures-util = "0.3.16"
pbr = "1.0.4"
crossterm = "0.21.0"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
common = { path = "../common" }

[dependencies.clap]
version = "2.33.3"
features = ["suggestions", "color" ]


[build-dependencies]
clap = "2.3.3"


