[package]
name = "rget"
version = "1.1.2"
authors = ["legendary-cookie <github.com@xolley.de>"]
edition = "2018"
build = "build.rs"
license = "MIT"

[lib]
name = "utils"
path = "src/lib.rs"

[[bin]]
name = "rget"
path = "src/main.rs"

[dependencies]
futures-util = "0.3.16"
pbr = "1.0.4"
crossterm = "0.21.0"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
common = { path = "../common" }
colored = "2"
ctrlc = "3.2.1"

[dependencies.clap]
version = "2.33.3"
features = ["suggestions", "color" ]

[build-dependencies]
clap = "2.3.3"
